# blackhole

./: README.md  pyproject.toml  roadmap.md
blackhole_core/: __init__.py  benchmarks.py  comparison_profiles.py  distortion.py  evidence_tiers.py  measured_quality.py  metrics.py  outlier_channels.py  portal_attention.py  predictive_transport.py  procedural_weights.py  real_model.py  run_manifest.py  runtime_capture_contract.py  scenario_model.py  semantic_pvs.py  stack.py  token_merging.py
docs/: blackhole_poc.md  package_architecture.md  readme.md  result_summary.md  results.md
evals/: README.md  build_measured_quality_artifact.py  generate_measured_quality_fixture.py  init_runtime_candidate_manifest.py  merge_runtime_capture_manifests.py  quality_corpus.jsonl
evals/bundles/fixture/: bundle__blackhole_turbo4_all_5.npz  bundle__f16.npz  bundle__q8_0.npz  bundle__turbo4.npz  bundle__turbo4_portal_attention.npz  (+22 more)
scripts/: README.md  _comparison_profiles.py  _measured_quality.py  _scenario_model.py  compression_quality.py  generate_results_docs.py  kl_divergence_vs_f16.py  long_context_perplexity.py  measure_skip_rate.py  niah_pvs_routing.py  niah_test.py  portal_attention.py  predictive_transport.py  run_measured_model_eval.py  semantic_pvs_routing.py  token_merging_poc.py  unified_poc.py
tests/: test_blackhole_core_algorithms.py  test_blackhole_hardening.py  test_comparison_profiles.py  test_generate_results_docs.py  test_measured_model_workflow.py  test_measured_quality.py  test_niah_configurations.py  test_script_execution_and_guards.py  test_token_merging.py
