[project]
name = "blackhole"
version = "0.2.0"
description = "Blackhole: section-aware benchmark and prototype suite for turbo4-derived routing, retrieval, transport, and procedural-weight experiments"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
bench = [
    "matplotlib",
    "accelerate",
    "torch",
    "transformers",
]

[tool.setuptools.packages.find]
include = ["blackhole_core*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
